--- a/src/Backend/Core/Layout/Sass/plugins/_tags-input.scss
+++ b/src/Backend/Core/Layout/Sass/plugins/_tags-input.scss
@@ -1,4 +1,5 @@
 .bootstrap-tagsinput {
   display: block;
   padding: 4px 6px 7px;
+  overflow: hidden;
 }
